bin/testsuite/tests/compiler/src/errors/compiler5761.swg
/*#global testerror "Err0431"
var G: *void
func toto(x: *u64)
    expect G != null
{
}*/
